fix imgs not showing

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,4 +1,4 @@
 body{
-background-image: url('src/images/bg-stars.svg');
+background-image: url('images/bg-stars.svg');
 background-color:  hsl(235, 16%, 14%);
 }
